# photobox

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  404.html  CMakeLists.txt  CMakePresets.json  Dockerfile  REUSE.toml  build_and_publish_docker.sh  cross-compile.sh  de.matnel.photobox.Devel.yaml  de.matnel.photobox.Devel.yml  de.matnel.photobox.yaml  de.matnel.photobox.yml  index.html  launcher.sh  mkdocs.yml  photobox-led.yaml  photobox-trigger.yaml  photobox.flatpakref  sitemap.xml  vcpkg.json
.esphome/: .gitignore
.esphome/idedata/: photobox-trigger.json
.esphome/storage/: photobox-trigger.yaml.json
.github/workflows/: BuildCrossCompile.yml  BuildDockerImages.yml  DeployDocs.yml  Documentation.yml  FlatpakBuild.yml  FlatpakUpdates.yml  PrValidation.yml  TestDocs.yml
CMake/: CPM.cmake  Dependencies.cmake  Options.cmake
Docker/: CMakeLists.txt
Docker/BuildImage/: CMakeLists.txt  Dockerfile  (+1 more)
Documentation/: docusaurus.config.ts  index.md  package-lock.json  package.json
EspHome/: photobox-camera-led.yaml  photobox-camera.yaml  photobox-trigger-c3.yaml  photobox-trigger-c6.yaml  photobox-trigger-host.yaml
Flatpak/: boost.yaml  catch2.yaml  cpptrace.yaml  fmt.yaml  gphoto2.yaml  json.yaml  libdwarf.yaml  libusb.yaml  lunasvg.yaml  quill.yaml  quite.yaml  stdexec.yaml
Photobox/: CMakeLists.txt
Photobox/App/: CMakeLists.txt  Countdown.qml  Main.qml  MainNew.qml  ShutterEffect.qml  ShutterShader.qml  main.cpp
Photobox/CollageEditorApp/: CMakeLists.txt  CollageImage.cpp  CollageImage.hpp  CollageImageModel.cpp  CollageImageModel.hpp  CollageRenderer.cpp  CollageRenderer.hpp  Main.qml  PrintController.cpp  PrintController.hpp  main.cpp
Photobox/CollageSession/: CMakeLists.txt
Photobox/CollageSession/Include/Pbox/Sessions/: CollageCaptureSessionFactory.hpp  CollageRenderer.hpp
Photobox/CollageSession/Source/: CollageCaptureSession.cpp  CollageCaptureSession.hpp  CollageCaptureSessionFactory.cpp  CollageRenderer.cpp
Photobox/CollageSession/Tests/: CMakeLists.txt  TestCollageRenderer.cpp  main.cpp
Photobox/Core/: ApplicationState.hpp  CMakeLists.txt  CameraImageProvider.cpp  CameraImageProvider.hpp  CameraLed.cpp  CameraLed.hpp  CaptureController.cpp  CaptureController.hpp  CaptureManager.cpp  CaptureManager.hpp  CapturePipeline.cpp  CapturePipeline.hpp  CaptureSessionCoordinator.cpp  CaptureSessionCoordinator.hpp  CaptureSessionFactory.cpp  CaptureSessionFactory.hpp  CaptureSessionManager.cpp  CaptureSessionManager.hpp  CollageCaptureSession.cpp  CollageCaptureSession.hpp  CollageCaptureSessionFactory.cpp  CollageCaptureSessionFactory.hpp  CollageContext.cpp  CollageContext.hpp  CollageFontCache.cpp  CollageFontCache.hpp  CollagePrinter.cpp  CollagePrinter.hpp  CollageRenderer.cpp  CollageRenderer.hpp  CollageSettings.hpp  Countdown.cpp  Countdown.hpp  CrashCollection.cpp  CrashCollection.hpp  GPhoto2Camera.cpp  GPhoto2Camera.hpp  ICamera.cpp  ICamera.hpp  ICaptureSession.cpp  (+44 more)
Photobox/Core/Fonts/GreatVibes/: OFL.txt
Photobox/GPhoto2/: CMakeLists.txt  GPhoto2Camera.cpp  GPhoto2Camera.hpp  GPhoto2CameraImpl.cpp  GPhoto2CameraImpl.hpp  GPhoto2CameraX.cpp  GPhoto2CameraX.hpp  GPhoto2Context.cpp  GPhoto2Context.hpp  GPhoto2Exeption.hpp  GPhoto2Integration.cpp  GPhoto2Integration.hpp  GPhoto2List.cpp  GPhoto2List.hpp  GPhoto2Worker.cpp  GPhoto2Worker.hpp  GPhoto2Wrapper.cpp  GPhoto2Wrapper.hpp
Photobox/GPhoto2/Include/Pbox/: GPhoto2Camera.hpp  GPhoto2Exeption.hpp
Photobox/GPhoto2/Source/: GPhoto2Camera.cpp  GPhoto2Context.cpp  GPhoto2Context.hpp  GPhoto2Integration.cpp  GPhoto2Integration.hpp  GPhoto2Wrapper.cpp  GPhoto2Wrapper.hpp
Photobox/Logging/: CMakeLists.txt
Photobox/Logging/include/Pbox/: Logger.hpp  SetupLogging.hpp
Photobox/Logging/src/: Logger.cpp
Photobox/Lumix/: CMakeLists.txt  LumixCamera.qml
Photobox/Lumix/Backend/: CameraNetwork.cpp  CameraNetwork.hpp
Photobox/Peripheral/: CMakeLists.txt  EspHomeCameraLed.cpp  EspHomeCameraLed.hpp  EspHomeClient.cpp  EspHomeClient.hpp  EspHomeRemoteTrigger.cpp  EspHomeRemoteTrigger.hpp  IEspHomeClient.hpp
Photobox/Settings/: CMakeLists.txt  PrinterSettingsPage.qml  ProjectSettingsPage.qml
Photobox/Settings/Include/Pbox/Settings/: Project.hpp  Types.hpp
Photobox/Settings/Include/Pbox/Settings/Detail/: TypesSerialization.hpp
Photobox/Settings/Qml/: PrinterSettingsPage.qml  ProjectSettingsPage.qml  RemoteTriggerSettingsPage.qml
Photobox/Settings/Source/: Project.cpp
Photobox/Settings/Tests/: CMakeLists.txt  TestAssets.hpp.in  TestProject.cpp
Photobox/Settings/Tests/Assets/: ProjectSettings.json
Photobox/SettingsApp/: CMakeLists.txt  Main.qml  main.cpp
Photobox/SignalTracer/: CMakeLists.txt  main.cpp
Photobox/SingleSession/: CMakeLists.txt
Photobox/SingleSession/Include/Pbox/Sessions/: SingleCaptureSessionFactory.hpp
Photobox/SingleSession/Source/: SingleCaptureSession.cpp  SingleCaptureSessionFactory.cpp
Photobox/Ui/: BusyPage.qml  Buzzer.qml  BuzzerAnimation.qml  CMakeLists.txt  CaptureMainPage.qml  CapturePage.qml  Countdown.qml  GlowEffect.qml  PageBackground.qml  PreviewImage.qml  PreviewPage.qml  ShutterEffect.qml  ShutterShader.qml  StatusPage.qml  SystemStatus.qml  SystemStatusDelegate.qml  VideoBox.qml
Photobox/Ui/ShutterShader/: ShutterShader.qep  shuttershader.frag.qsb  shuttershader.vert.qsb
Photobox/Ui/Source/: CaptureSessionList.cpp  CaptureSessionList.hpp
Photobox/Utils/: CMakeLists.txt
Photobox/Utils/include/Pbox/: CleanupAsyncScope.hpp  Conditional.hpp  DisableCopyMove.hpp  Instance.hpp  ObjectUniquePtr.hpp  PrintLicenseInfo.hpp  QStdexec.hpp
Photobox/Utils/src/: PrintLicenseInfo.cpp
Tests/: CMakeLists.txt  CollageRendererTest.cpp  GPhoto2IntegrationTest.cpp  ProjectTest.cpp  TestAssets.hpp.in  TestCollageCaptureSession.cpp  TestEspHomeRemoteTrigger.cpp  main.cpp  pixel_match.cpp  pixel_match.hpp
Tests/CaptureSessions/: CMakeLists.txt  CollageCaptureSessionTest.cpp  SingleCaptureSessionTest.cpp
Tests/assets/: TestProject.json  collage_settings.json
flatpak-repo/: summary  summary.idx
search/: search_index.json
(+17 files in other folders)
