add_subdirectory(Logging)
add_subdirectory(Utils)
add_subdirectory(Core)
add_subdirectory(Peripheral)
add_subdirectory(Ui)
#add_subdirectory(Lumix)
add_subdirectory(GPhoto2)
add_subdirectory(Settings)
add_subdirectory(CollageEditorApp)

add_subdirectory(App)
add_subdirectory(SettingsApp)
add_subdirectory(SignalTracer)
