# SPDX-FileCopyrightText: 2025 Mathis Logemann <mathis.opensource@tuta.io>
#
# SPDX-License-Identifier: GPL-3.0-or-later

add_subdirectory(Logging)
add_subdirectory(Utils)
add_subdirectory(Core)
add_subdirectory(CollageSession)
add_subdirectory(Peripheral)
add_subdirectory(Ui)
#add_subdirectory(Lumix)
add_subdirectory(GPhoto2)
add_subdirectory(Settings)
#add_subdirectory(CollageEditorApp)

add_subdirectory(App)
add_subdirectory(SignalTracer)
